# disconnection_aware_retrosynthesis

./: .gitignore  AUTHORS.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
data/: README.MD
disconnection_aware_retrosynthesis/: tagging.py
docs/: conf.py  index.rst
docs/api/: disconnection_aware_retrosynthesis.rst  disconnection_aware_retrosynthesis.utils.rst  modules.rst
notebooks_and_scripts/: 01_preprocess_onmt.sh  02_train.sh  03_translate.sh  basic_preprocessing_example.ipynb  basic_tag_and_tokenise.ipynb  map_reactions.py  map_reactions_extract_templates.py  preprocess.yaml  preprocess_continued.yaml  rxn_preprocessing_workflow.ipynb  tag_analysis.py  tag_and_tokenise.ipynb  uspto_preprocessing_example.ipynb
src/dar/: __init__.py  aam.py  chem.py  tagging.py  tokenisation.py
tests/: conftest.py  test_utils_chem.py  test_utils_tagging.py
