[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "importlib_metadata.*",
    "pandas.*",
    "rdkit.*",
    "rxn_biocatalysis_tools.*",
    "sphinx.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"