#[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
# requires = ["setuptools>=46.1.0", "wheel"]
# build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "importlib_metadata.*",
    "pandas.*",
    "rdkit.*",
    "rxn_biocatalysis_tools.*",
    "dar.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"