# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = disconnection_aware_retrosynthesis
description = Tools for enabling disconnection tagging and retrosynthetic prediction
author = Amol Thakkar
author_email = tha@zurich.zurich.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
#url = https://github.com/pyscaffold/pyscaffold/
# Add here related links, for example:
project_urls =
#    Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =disconnection_aware_retrosynthesis

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.7

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    click
    pandas>=1.1.5
    rxn-reaction-preprocessing>=2.0.2
    rxn-biocatalysis-tools
    rxn-chem-utils>=1.0.3
    rxn-utils>=1.1.0
    rxnmapper
    rdchiral==1.1.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
dev =
    black>=22.3.0
    flake8>=3.8.4
    isort>=5.10.1
    mypy>=0.761
    pytest-cov
    pytest>=5.3.4
    setuptools>=52.0.0
    types-setuptools>=57.0.0
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit-pypi>=2021.3.2.3

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = disconnection_aware_retrosynthesis.module:function
# For example:
# console_scripts =
#     fibonacci = disconnection_aware_retrosynthesis.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov disconnection_aware_retrosynthesis --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
extend_ignore = E203, E501, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.2.1
package = disconnection_aware_retrosynthesis
extensions =
    no_skeleton
