[metadata]
name = dar
version = attr: dar.__version__
description = Tools for enabling disconnection tagging and retrosynthetic prediction
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    = src
python_requires = >=3.7
install_requires =
    click
    pandas>=1.1.5
    rxn-reaction-preprocessing>=2.0.2
    rxn-biocatalysis-tools
    rxn-chem-utils>=1.0.3
    rxn-utils>=1.1.0
    rxn-opennmt-py>=1.1.1
    rxnmapper==0.2.3
    rdchiral==1.1.0
    tensorboard>=2.11.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    black>=22.3.0
    flake8>=3.8.4
    isort>=5.10.1
    mypy>=0.761
    pytest>=5.3.4
    setuptools>=52.0.0
    types-setuptools>=57.0.0
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit-pypi>=2021.3.2.3

[flake8]
# Some sane defaults for the code style checker flake8
extend_ignore = E203, E501, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py